src/objects/c2g__codaPaymentTemplate__c.object
<CustomObject>
    <customHelpPage>c2g__codahelppaymenttemplate</customHelpPage>
    <description>Defines a template for a new payment proposal.</description>
    <fields>
        <fullName>c2g__AccountCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Payment Templates (Account Currency)</relationshipLabel>
        <relationshipName>PaymentTemplatesAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>c2g__codaBankAccount__c</referenceTo>
        <relationshipLabel>Payment Templates</relationshipLabel>
        <relationshipName>PaymentTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CWODimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Payment Templates</relationshipLabel>
        <relationshipName>PaymentTemplatesCWO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CWODimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Payment Templates</relationshipLabel>
        <relationshipName>PaymentTemplatesCWO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CWODimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Payment Templates</relationshipLabel>
        <relationshipName>PaymentTemplatesCWO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CurrencyMode__c</fullName>
        <label>Currency Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Document</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CurrencyWriteOff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency Write-off</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Payment Templates (Currency Write-off)</relationshipLabel>
        <relationshipName>PaymentTemplatesCurrencyWriteOff</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Payment Templates (Document Currency)</relationshipLabel>
        <relationshipName>PaymentTemplatesDC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Payment Templates</relationshipLabel>
        <relationshipName>PaymentTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Payment Templates</relationshipLabel>
        <relationshipName>PaymentTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Payment Templates (Payment Currency)</relationshipLabel>
        <relationshipName>Payment_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentMediaTypes__c</fullName>
        <label>Payment Media</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentMethod__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentTypes__c</fullName>
        <label>Payment Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SDRDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Payment Templates (Dimension 1)</relationshipLabel>
        <relationshipName>PaymentTemplatesSDR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SDRDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Payment Templates (Dimension 2)</relationshipLabel>
        <relationshipName>PaymentTemplatesSDR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SDRDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Payment Templates (Dimension 3)</relationshipLabel>
        <relationshipName>PaymentTemplatesSDR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SettlementDiscountReceived__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Settlement Discount</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Payment Templates (Settlement Discount Received)</relationshipLabel>
        <relationshipName>PaymentTemplatesSettlementDiscountReceiv</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Payment Template</label>
    <listViews>
        <fullName>FF_Fly_Now_Pay_Later_Limited_06936813_codaPaymentTemplate</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Fly Now Pay Later Limited (06936813)</label>
        <queue>FF_Fly_Now_Pay_Later_Limited_06936813</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_Limited_codaPaymentTemplate</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund Limited</label>
        <queue>FF_Travelfund_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_co_uk_Limited_codaPaymentTemplate</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund.co.uk Limited</label>
        <queue>FF_Travelfund_co_uk_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__GeneralLedgerAccount__c</columns>
        <columns>c2g__CurrencyMode__c</columns>
        <columns>c2g__PaymentMethod__c</columns>
        <columns>c2g__PaymentMediaTypes__c</columns>
        <columns>c2g__PaymentTypes__c</columns>
        <columns>c2g__BankAccount__c</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payment Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Templates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>